# RootLens

./: .env.example  .gitignore  AGENTS.md  README.md  compose.yaml
observability/: README.md
observability/grafana/dashboards/: inventory-overview.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/grafana/provisioning/datasources/: prometheus.yml
observability/prometheus/: prometheus.yml
services/inventory/: README.md  pyproject.toml
services/inventory/migrations/: env.py  script.py.mako
services/inventory/migrations/versions/: 0001_create_inventory_items.py
services/inventory/src/inventory_service/: __init__.py  database.py  logging_config.py  main.py  metrics.py  request_context.py
services/inventory/src/inventory_service/api/: __init__.py  health.py  items.py  metrics.py
services/inventory/src/inventory_service/middleware/: __init__.py  metrics.py  request_logging.py
services/inventory/src/inventory_service/models/: __init__.py  base.py  inventory_item.py
services/inventory/src/inventory_service/repositories/: __init__.py  inventory_items.py
services/inventory/src/inventory_service/schemas/: __init__.py  inventory_item.py
services/inventory/tests/: __init__.py  conftest.py  test_database.py  test_health.py  test_inventory_repository.py  test_items.py  test_logging.py  test_metrics.py
