[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rootlens-inventory-service"
version = "0.1.0"
description = "The inventory service used by RootLens"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30,<1.0",
    "fastapi>=0.115,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "alembic>=1.14,<2.0",
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.9,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
